# x-cashu-search

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  config.toml  example.config.toml  flake.nix
src/: cli.rs  config.rs  db.rs  main.rs
